tests/haste_module_ref_standard_cjs_esm_interop/haste_module_ref_standard_cjs_esm_interop.exp
Error ------------------------------------------------------------------------------------------------------ test.js:5:1

Cannot cast `extractedModuleInfo` to string because `$Flow$EsmModuleMarkerWrapperInModuleRef` [1] is incompatible with
string [2]. [incompatible-type]

   test.js:5:1
    5| extractedModuleInfo as string; // error;
       ^^^^^^^^^^^^^^^^^^^

References:
   <BUILTINS>/prelude.js:87:21
   87| declare opaque type $Flow$EsmModuleMarkerWrapperInModuleRef<+T>: T;
                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   test.js:5:24
    5| extractedModuleInfo as string; // error;
                              ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:6:1

Cannot cast `extractedModuleInfo` to empty because `$Flow$EsmModuleMarkerWrapperInModuleRef` [1] is incompatible with
empty [2]. [incompatible-type]

   test.js:6:1
    6| extractedModuleInfo as empty; // error;
       ^^^^^^^^^^^^^^^^^^^

References:
   <BUILTINS>/prelude.js:87:21
   87| declare opaque type $Flow$EsmModuleMarkerWrapperInModuleRef<+T>: T;
                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   test.js:6:24
    6| extractedModuleInfo as empty; // error;
                              ^^^^^ [2]



Found 2 errors
